<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_map"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/colorBlack"
        >
    </TextView>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/lac_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lac"
            android:textColor="@color/colorBlack"
            android:background="@color/colorPrimaryDark"
            />

        <Button
            android:id="@+id/cell_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cell_id"
            android:textColor="@color/colorBlack"
            android:background="@color/design_default_color_error"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/tec_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tec"
            android:textColor="@color/colorBlack"
            android:background="@color/colorAccent"
            />

        <Button
            android:id="@+id/plmn_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plmn"
            android:textColor="@color/colorBlack"
            android:background="@color/colorGray"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

</LinearLayout>