<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/application_description"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/colorBlack"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_description"
        android:textSize="17sp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/colorBlack"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_description"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textColor="@color/colorBlack"
        />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:background="@color/number4"
        android:padding="5dp"
        />

</LinearLayout>